--- a/style.css
+++ b/style.css
@@ -149,12 +149,10 @@ body {
     flex-direction: row;
 }
 .project {
-    background: url('mayden.png') no-repeat center;
-    background-size: cover;
     opacity: 0.6;
     width: 30vw;
     height: 40vh;
-    margin-top: 10vh;
+    margin-top: 8vh;
     overflow: hidden;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -165,8 +163,8 @@ body {
     -webkit-filter: grayscale(0);
     filter: grayscale(0);
     opacity: 1;
-    width: 32vw;
     visibility: visible;
+    transform: scale(1.05);
 }
 .project a {
     display: block;
@@ -176,6 +174,7 @@ body {
     background-size: cover;
     width: 100%;
     height: 100%;
+    text-decoration: none;
 }
 .project a p {
     text-align: center;
@@ -184,10 +183,46 @@ body {
     font-size: 2em;
     color: #feda4a;
     text-decoration: none;
-    visibility: hidden;
+    display: none;
 }
-.project a p:hover {
-    visibility: visible;
+.project a:hover p {
+    display: block;
+}
+
+.Portfolio_v1 {
+    background: url('portfolio1.jpg') no-repeat;
+    background-size: cover;
+}
+.blackjack {
+    background: url('Blackjack21.jpg') no-repeat;
+    background-size: cover;
+}
+.Challenge_fence {
+    background: url('fence1.jpg') no-repeat;
+    background-size: cover;
+}
+.Cow_Game {
+    background: url('spacecow.png') no-repeat;
+    background-size: cover;
+}
+.solar_system {
+    background: url('solar_system.jpg') no-repeat;
+    background-size: cover;
+}
+.Mayden {
+    background: url('logo-vertical.jpg') no-repeat;
+    background-size: cover;
+}
+
+@media screen and (max-width: 975px) {
+    .page3 {
+        background-attachment: fixed;
+        overflow: auto;
+    }
+    .project {
+        width: 40vw;
+        height: 30vh;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -230,29 +265,20 @@ body {
         width: 15vw;
         margin: 0 2vw;
     }
-    .page3{
+    .page3 {
         background-attachment: fixed;
         overflow: auto;
     }
+    .list {
+        flex-flow:column wrap;
+    }
     .project {
-        width: 90vw;
+        width: 80vw;
         height: 30vh;
+        margin: auto;
     }
     .project a p {
         font-size: 1em;
         margin: 5vh auto;
     }
 }
-
-@media screen and (max-width: 975px) {
-    .page3{
-        background-attachment: fixed;
-        overflow: auto;
-    }
-    .project {
-        width: 40vw;
-        height: 30vh;
-    }
-}
-
-
